# rocket-league-gym-sim

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
rlgym_sim/: __init__.py  gym.py  make.py
rlgym_sim/envs/: match.py
rlgym_sim/simulator/: __init__.py  jax_backend.py  legacy_backend.py  sim_backend.py
rlgym_sim/utils/: compat.py
rlgym_sim/utils/action_parsers/: action_parser.py  continuous_act.py  default_act.py  discrete_act.py
rlgym_sim/utils/obs_builders/: obs_builder.py
